<resources>
    <string name="app_name">HTSeaFood</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="invoice">Invoice</string>
    <string name="order">Order</string>
    <string name="shipment">Shipment</string>
    <string name="api_fail_message"><![CDATA[H&T Sea Food server is currently unavailable; please try again later.]]></string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="amount_including_vat">Amount including VAT:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="order_date">Order Date:</string>
    <string name="posting_date">Posting Date:</string>
    <string name="shipment_date">Shipment Date:</string>
    <string name="contact">Contact:</string>
    <string name="county_region_code">County Region Code:</string>
    <string name="county">County:</string>
    <string name="h_amp_t_seafood_inc"><![CDATA[H&T Seafood, INC]]></string>
    <string name="amount">Amount</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="amount_including_vat2">Amount Including VAT</string>
    <string name="description">Description:</string>
    <string name="quantity">Quantity</string>
    <string name="unit_of_measure">Unit of Measure</string>
    <string name="unit_price">Unit Price</string>
    <string name="contact_person">Contact Person:</string>
    <string name="add_more">Add More</string>
    <string name="delete">Delete</string>
    <string name="enter_upc_or_item_no">Enter UPC or Item No</string>
    <string name="order_quantity">Order Quantity</string>
    <string name="description2">Description</string>
    <string name="no">No</string>
    <string name="upc">UPC</string>
    <string name="search">Search</string>
    <string name="add_order_item">Add Order Item</string>
    <string name="add">Add</string>
    <string name="edit_order_quantity">Edit Order quantity</string>
    <string name="case_pack">Case Pack</string>
</resources>