<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sora_bold"
            android:includeFontPadding="false"
            android:padding="@dimen/_11sdp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            tools:text="Order ID: #241347" />


        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/back" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/llView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/corner_round_box"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_round_gray_bg"
            android:elevation="@dimen/_3sdp"
            android:fontFamily="@font/sora_semibold"
            android:includeFontPadding="false"
            android:padding="@dimen/_10sdp"
            android:text="@string/h_amp_t_seafood_inc"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/_12ssp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_regular"
                android:includeFontPadding="false"
                android:text="@string/contact_person"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvContactPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/sora_regular"
                android:includeFontPadding="false"
                android:textColor="@color/light_text"
                android:textSize="@dimen/_10ssp"
                tools:text="abcd" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_regular"
                android:includeFontPadding="false"
                android:text="@string/address"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/sora_regular"
                android:includeFontPadding="false"
                android:textColor="@color/light_text"
                android:textSize="@dimen/_10ssp"
                tools:text="123 fake street" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_regular"
                android:includeFontPadding="false"
                android:text="@string/order_date"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvOrderdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/sora_regular"
                android:includeFontPadding="false"
                android:textColor="@color/light_text"
                android:textSize="@dimen/_10ssp"
                tools:text="02-10-2023" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_regular"
                android:includeFontPadding="false"
                android:text="@string/posting_date"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvPostingdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/sora_regular"
                android:includeFontPadding="false"
                android:textColor="@color/light_text"
                android:textSize="@dimen/_10ssp"
                tools:text="02-10-2023" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_regular"
                android:includeFontPadding="false"
                android:text="@string/shipment_date"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/tvShipingdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/sora_regular"
                android:includeFontPadding="false"
                android:textColor="@color/light_text"
                android:textSize="@dimen/_10ssp"
                tools:text="02-10-2023" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>