<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="order"
            type="com.example.htseafood.model.responses.ValueItem" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/llInvoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_round_box"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_minus2sdp">


            <TextView
                android:id="@+id/tvOrderNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/corner_round_blue_bg"
                android:fontFamily="@font/sora_bold"
                android:includeFontPadding="false"
                android:paddingHorizontal="@dimen/_8sdp"
                android:paddingVertical="@dimen/_2sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                tools:text="#1  Order No : 2442774" />

            <ImageView
                android:id="@+id/ivArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/arrow"
                android:tag="0" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_bold"
                android:includeFontPadding="false"
                android:text="@string/order_date"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvOrderdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/sora_regular"
                android:includeFontPadding="false"
                android:text="@{order.orderDate}"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_12ssp"
                tools:text="02-10-2023" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_bold"
                android:includeFontPadding="false"
                android:text="@string/posting_date"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvPostingdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/sora_regular"
                android:includeFontPadding="false"
                android:text="@{order.postingDate}"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_12ssp"
                tools:text="02-10-2023" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora_bold"
                android:includeFontPadding="false"
                android:text="@string/shipment_date"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvShipmentdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/sora_regular"
                android:includeFontPadding="false"
                android:text="@{order.shipmentDate}"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_12ssp"
                tools:text="02-10-2023" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llExtraView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical"
            android:visibility="gone">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sora_regular"
                    android:includeFontPadding="false"
                    android:text="@string/address"
                    android:textColor="@color/light_text"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:fontFamily="@font/sora_regular"
                    android:includeFontPadding="false"
                    android:text="@{order.sellToAddress}"
                    android:textColor="@color/light_text"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sora_regular"
                    android:includeFontPadding="false"
                    android:text="@string/city"
                    android:textColor="@color/light_text"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/tvCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:fontFamily="@font/sora_regular"
                    android:includeFontPadding="false"
                    android:text="@{order.sellToCity}"
                    android:textColor="@color/light_text"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sora_regular"
                    android:includeFontPadding="false"
                    android:text="@string/contact"
                    android:textColor="@color/light_text"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/tvContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:fontFamily="@font/sora_regular"
                    android:includeFontPadding="false"
                    android:text="@{order.selltoContact}"
                    android:textColor="@color/light_text"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sora_regular"
                    android:includeFontPadding="false"
                    android:text="@string/county_region_code"
                    android:textColor="@color/light_text"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/tvCountyCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:fontFamily="@font/sora_regular"
                    android:includeFontPadding="false"
                    android:text="@{order.selltoCountryRegionCode}"
                    android:textColor="@color/light_text"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sora_regular"
                    android:includeFontPadding="false"
                    android:text="@string/county"
                    android:textColor="@color/light_text"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/tvCounty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:fontFamily="@font/sora_regular"
                    android:includeFontPadding="false"
                    android:text="@{order.selltoCounty}"
                    android:textColor="@color/light_text"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>