<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/_8sdp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sora_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingTop="@dimen/_3sdp"
        android:paddingBottom="@dimen/_11sdp"
        android:text="@string/edit_order_quantity"
        android:textAllCaps="true"
        android:textColor="@color/dark_text"
        android:textSize="@dimen/_14ssp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sora_regular"
            android:includeFontPadding="false"
            android:text="@string/upc"
            android:textColor="@color/light_text"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tvUPC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_2sdp"
            android:fontFamily="@font/sora_regular"
            android:includeFontPadding="false"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/_11ssp"
            tools:text="59854552214" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:background="@color/gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sora_regular"
            android:includeFontPadding="false"
            android:text="@string/no"
            android:textColor="@color/light_text"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tvNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_2sdp"
            android:fontFamily="@font/sora_regular"
            android:includeFontPadding="false"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/_11ssp"
            tools:text="64068" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:background="@color/gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sora_regular"
            android:includeFontPadding="false"
            android:text="@string/description2"
            android:textColor="@color/light_text"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_toEndOf="@+id/tvLabel"
            android:fontFamily="@font/sora_regular"
            android:gravity="end"
            android:includeFontPadding="false"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/_11ssp"
            tools:text="LAYER CAKE, COCONUT FLAVOR" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:background="@color/gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sora_regular"
            android:includeFontPadding="false"
            android:text="@string/unit_of_measure"
            android:textColor="@color/light_text"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tvUnitofMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_2sdp"
            android:fontFamily="@font/sora_regular"
            android:includeFontPadding="false"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/_11ssp"
            tools:text="CS" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:background="@color/gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sora_regular"
            android:includeFontPadding="false"
            android:text="@string/unit_price"
            android:textColor="@color/light_text"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tvUnitPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_2sdp"
            android:fontFamily="@font/sora_regular"
            android:includeFontPadding="false"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/_11ssp"
            tools:text="$130.00" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:background="@color/gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/sora_bold"
            android:includeFontPadding="false"
            android:text="Update Quantity"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/evQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_2sdp"
            android:background="@drawable/corner_round_editbox"
            android:fontFamily="@font/sora_semibold"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:inputType="number"
            android:maxLines="1"
            android:minEms="4"
            android:paddingLeft="@dimen/_12sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingRight="@dimen/_12sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12ssp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gray"
            android:fontFamily="@font/sora_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_8sdp"
            android:text="CANCEL"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:fontFamily="@font/sora_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_8sdp"
            android:text="UPDATE"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>
</LinearLayout>